# cookiecutter-python

./: .gitignore  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  README.md  Taskfile.yaml  cookiecutter.json  mkdocs.yaml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yaml  test.yaml  tests.yaml
docs/: index.md
hooks/: post_gen_project.py
tests/: replay.json  test_cookiecutter.py
tests/example-project/: .env  .releaserc.js  .releaserc.json  Dockerfile  LICENSE  README.md  Taskfile.yaml  mkdocs.yaml  pyproject.toml  requirements.txt
tests/example-project/.github/workflows/: docker.yaml  lint.yaml  publish.yaml  release.yaml  test.yaml  tests.yaml
tests/example-project/docs/: contributing.md  gen_pages.py  index.md
tests/example-project/example_project/: __about__.py  __init__.py  __main__.py  cli.py
tests/example-project/src/example_project/: __about__.py
tests/example-project/tests/: __init__.py  conftest.py  test_cli.py  test_example.py
{{cookiecutter.repo_name}}/: .env  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  Dockerfile  README.md  Taskfile.yaml  mkdocs.yaml  pyproject.toml  requirements.txt  tox.ini
{{cookiecutter.repo_name}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.repo_name}}/.github/workflows/: docker.yaml  docs.yaml  labeler.yaml  lint.yaml  publish.yaml  release.yaml  test.yaml  tests.yaml  version_checker.yaml
{{cookiecutter.repo_name}}/docs/: README.md  gen_pages.py  index.md
{{cookiecutter.repo_name}}/docs/source/: conf.py  contributing.md  index.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_slug}}/: __about__.py  __init__.py
{{cookiecutter.repo_name}}/tests/: test_cli.py  test_example.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/: __about__.py  __init__.py  __main__.py  _cli.py  cli.py
