[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
description = "Brief description of the project"
license = "MIT"
name = "cookiecutter-python"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.0"

[dependency-groups]
dev = [
  "cookiecutter~=2.4.0",
  "pytest",
  "pytest-cov"
]
docs = [
  "mkdocs~=1.5.2",
  "mkdocs-material~=9.2.3",
  "mkdocstrings~=0.22.0",
  "markdown-exec[ansi]~=1.6.0"
]
